<resources>
    <string name="app_name" translatable="false">Gebeya</string>
    <string name="base_url" translatable="false">https://5e8f-197-156-80-12.eu.ngrok.io/</string>

    <string name="language">Language</string>
    <string name="price_in_ethio">%1$.2f ETB</string>

    <string name="amharic" translatable="false">አማርኛ</string>
    <string name="english" translatable="false">English</string>

    <string name="firstName" translatable="false">firstName</string>
    <string name="lastName" translatable="false">lastName</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="passwordConfirmation" translatable="false">passwordConfirmation</string>

    <string name="password_instruction">Enter the email associated with your account and we\'ll send account reset instruction to your email.</string>
    <string name="confirm_instruction">Enter the email associated with your account and we\'ll send account confirmation link to your email.</string>

    <!--  MESSAGES  -->
    <string name="invalid">Invalid</string>
    <string name="required">Required</string>
    <string name="msg_connection_error">Connection Error</string>
    <string name="msg_not_connected">You are not connected to internet. Please connect to internet to proceed further.</string>

    <!--  LABELS   -->
    <string name="btn_connect">Connect</string>
    <string name="btn_cancel">Cancel</string>
    <string name="content_description" translatable="false">Content description</string>

    <string name="lbl_home" translatable="false">Home</string>
    <string name="lbl_carts" translatable="false">Carts</string>
    <string name="lbl_search" translatable="false">Search</string>
    <string name="lbl_profile" translatable="false">Profile</string>

    <string name="lbl_recommended">Recommended Products</string>
    <string name="lbl_see_all">See all</string>

    <string name="settings">Settings</string>

    <!-- SAMPLE(Design purpose)   -->
    <string name="sample_category_name" translatable="false">All</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="password_error"><![CDATA[Length must be >5]]></string>
    <string name="dont_match">Do not match</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"
    </string>

    <string name="categories">Categories</string>
    <string name="app_pref">Application</string>
    <string name="on">on</string>
    <string name="night_mode">Night Mode</string>
    <string name="font_size_msg" translatable="false">Font size for text description of product.</string>
    <string name="font_size">Font Size</string>
    <string name="clear_carts">Clear</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign In</string>
    <string name="nav_header_desc" />
    <string name="nav_header_title">Guest-User</string>
    <string name="nav_header_subtitle">Sign-in to continue</string>
    <string name="query_text">Enter product/brand name</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign Up</string>
    <string name="lbl_unlock">Unlock Account</string>
    <string name="msg_account_locked">Account locked?</string>
    <string name="or">OR</string>
    <string name="msg_sign_in_to_continue">Sign in to continue</string>
    <string name="msg_welcome">Welcome</string>
    <string name="btn_send">Send</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="auto" translatable="false">auto</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="lbl_related_products">Related Products</string>
    <string name="product_image_place_h">product image</string>
    <string name="feedback_msg">Please provide your feedback here</string>
    <string name="terms_and_condition">By signing up, you\'re agree to our <a href="https://t.me/lee_crey">Terms &amp; Conditions</a> and <a href="https://googl.come"> Privacy Policy.</a> </string>
    <string name="lbl_confirm">Confirm Account</string>
    <string name="not_confirmed_yet">Not confirmed yet?</string>
    <string name="redirected_from_web">From web</string>
    <string name="token">Token</string>
    <string name="you_are_redirected_from_web">You are redirected from web.</string>

</resources>
