<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_pref">

        <ListPreference
            app:defaultValue="@string/auto"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme_mode"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:defaultValue="16"
            app:key="font_size"
            app:summary="@string/font_size_msg"
            app:title="@string/font_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>