<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.ethio.gpro.ui.fragments.HomeFragment"
        android:label="@string/lbl_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/show_product"
            app:destination="@id/navigation_product"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/open_recommended_products"
            app:destination="@id/recommendedProductFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_navigation_home_to_feedbackFragment"
            app:destination="@id/navigation_feedback"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/to_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_carts"
        android:name="org.ethio.gpro.ui.fragments.CartsFragment"
        android:label="@string/lbl_carts"
        tools:layout="@layout/fragment_carts" >
        <action
            android:id="@+id/show_cart"
            app:destination="@id/navigation_cart"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.ethio.gpro.ui.fragments.ProfileFragment"
        android:label="@string/lbl_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/from_profile_to_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="org.ethio.gpro.ui.fragments.SearchFragment"
        android:label="@string/lbl_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.ethio.gpro.ui.fragments.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/navigation_product"
        android:name="org.ethio.gpro.ui.fragments.ProductFragment"
        android:label="{productName}"
        tools:layout="@layout/fragment_product">
        <argument
            android:name="productId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="productName"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/recommendedProductFragment"
        android:name="org.ethio.gpro.ui.fragments.RecommendedFragment"
        android:label="@string/lbl_recommended"
        tools:layout="@layout/fragment_recommended" />
    <fragment
        android:id="@+id/navigation_feedback"
        android:name="org.ethio.gpro.ui.fragments.FeedbackFragment"
        android:label="@string/lbl_feedback"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="org.ethio.gpro.ui.fragments.SessionsFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sessions">
        <action
            android:id="@+id/login_to_sign_up"
            app:destination="@id/navigation_sign_up"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/from_login_to_unlock"
            app:destination="@id/navigation_unlock"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/navigation_sign_up"
        android:name="org.ethio.gpro.ui.fragments.RegistrationsFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_registrations" />
    <fragment
        android:id="@+id/navigation_unlock"
        android:name="org.ethio.gpro.ui.fragments.UnlockFragment"
        android:label="{lable_name}"
        tools:layout="@layout/fragment_instruction">
        <argument
            android:name="lable_name"
            android:defaultValue="Unlock"
            app:argType="string" />
        <argument
            android:name="isUnlock"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cart"
        tools:layout="@layout/fragment_cart"
        android:name="org.ethio.gpro.ui.fragments.CartFragment"
        android:label="{shopName}">
        <argument
            android:name="shopName"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>